--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ closeBtn.addEventListener('click',function(){
   menu.classList.remove('active');
 })
 
-var menuItem=document.querySelector('.menu-itema');
+var menuItem=document.querySelector('.menu-items');
 menuItem.addEventListener('click',function(){
   menu.classList.remove('active');
 })
